tests/syntax_error/generic_missing_comma_define.jou
class Foo[T U]:  # Error: expected a ']', got a variable name 'U'
    pass
